<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.cic.cicmovil.activities.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="@dimen/iv_login_logo"
            android:layout_height="@dimen/iv_login_logo"
            android:contentDescription="@string/imagen"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TableRow
            android:id="@+id/tr_caja1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/iv_login_logo"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/iv_login_user"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_user"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/imagen" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="?android:attr/textAppearanceMedium"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/et_login_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:hint="@string/usuario" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tr_caja2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tr_caja1"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/iv_login_pwd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_pwrd"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/imagen" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="?android:attr/textAppearanceMedium"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <Button
            android:id="@+id/btn_login_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tr_caja2"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/primary_light"
            android:text="@string/ingresar"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tv_login_forgot"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_height="50dp"
            android:layout_below="@id/btn_login_in"
            android:textColorLink="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/forgot"
            android:layout_margin="5dp"/>

    </RelativeLayout>

</RelativeLayout>
